add error responses to apispec.json
